# crosreleasenotifier

./: Cargo.toml  README.md  crosreleasenotifier.service  crosreleasenotifier.timer
src/: decorators.rs  main.rs
