[package]
name = "crosreleasenotifier"
version = "1.0.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
feed-rs = "1.4.0"
html2text = "0.12.2"
notify-rust = "4.10.0"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
xdg = "2.5.2"
